--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "proxy": "http://localhost:5000"
+    "web-vitals": "^2.1.4"
   },
   
   "scripts": {
